package fr.unice.polytech.biblio.api.dtos;

public record StudentDTO(int studentNumber) {
}
