@startuml
class fr.unice.polytech.repositories.BasicRepositoryImpl {
- HashMap<ID,T> storage
+ long count()
+ void deleteAll()
+ void deleteById(ID)
+ boolean existsById(ID)
+ Iterable<T> findAll()
+ Optional<T> findById(ID)
+ void save(S,ID)
}


class fr.unice.polytech.biblio.components.StudentRegistry {
- StudentRepository studentRepository
+ List<Etudiant> findAll()
+ Optional<Etudiant> findByName(String)
+ Optional<Etudiant> findByNumber(int)
+ void addStudent(String,int)
+ void removeStudent(int)
+ void updateStudent(int,String)
}


class fr.unice.polytech.biblio.server.httphandlers.MembersHttpHandler {
- StudentRegistry studentRegistry
~ {static} Logger logger
+ void handle(com.sun.net.httpserver.HttpExchange)
- void askToDeleteMember(HttpExchange)
- void askToUpdateMember(HttpExchange)
- void askToCreateMember(HttpExchange)
- void answerWithMember(HttpExchange,String)
- void answerWithAllMembers(HttpExchange)
}


class fr.unice.polytech.biblio.components.Bibliotheque {
+ {static} int DUREE_MAX_EMPRUNT
- BookRepository bookRepository
- Map<Livre,Emprunt> emprunts
- void initLibrary()
+ void addLivre(Livre)
+ List<Livre> getLivres()
+ Optional<Livre> getLivreDisponibleByTitle(String)
+ List<Livre> getLivresByTitle(String)
+ boolean emprunte(Etudiant,Livre)
+ Emprunt getEmpruntByLivre(Livre)
+ boolean rend(Livre)
+ List<Emprunt> getEmprunts()
+ Livre getLivreParBiblioId(String)
}


interface fr.unice.polytech.repositories.Repository {
~ long count()
~ void deleteAll()
~ void deleteById(ID)
~ boolean existsById(ID)
~ Iterable<T> findAll()
~ Optional<T> findById(ID)
~ void save(S,ID)
}

interface fr.unice.polytech.biblio.server.httphandlers.RouteHandler {
~ void handle(HttpExchange,Map<String,String>,ResponseSender)
}

class fr.unice.polytech.biblio.repositories.StudentRepository {
- Map<String,Integer> students
+ void save(Etudiant,Integer)
+ Optional<Etudiant> findByName(String)
}


class fr.unice.polytech.biblio.server.JaxsonUtils {
+ {static} String toJson(Object)
+ {static} T fromJson(String,Class<T>)
}

class fr.unice.polytech.biblio.server.SimpleHttpServer4Scolarity {
- {static} Map<Integer,HttpServer> servers
+ {static} int DEFAULT_PORT
~ {static} java.util.logging.Logger logger
+ {static} void main(String[])
+ {static} HttpServer startServer(int)
+ {static} HttpServer startServer(int,StudentRegistry)
+ {static} void stopServer(int)
}


interface fr.unice.polytech.biblio.interfaces.StudentFinder {
~ List<T> findAll()
~ Optional<T> findByName(String)
~ Optional<T> findByNumber(int)
}

interface fr.unice.polytech.biblio.server.httphandlers.ResponseSender {
~ void send(int,String,Map<String,String>)
}

class fr.unice.polytech.biblio.server.httphandlers.HttpUtils {
+ {static} int OK_CODE
+ {static} int CREATED_CODE
+ {static} int NO_CONTENT_CODE
+ {static} int BAD_REQUEST
+ {static} int NOT_FOUND_RESOURCE
+ {static} int INTERNAL_SERVER_ERROR_CODE
+ {static} String CONTENT_TYPE
+ {static} String APPLICATION_JSON
+ {static} String TEXT_PLAIN
}

class fr.unice.polytech.biblio.entities.Etudiant {
- String nom
- int noEtudiant
- Collection<Emprunt> emprunts
+ String getName()
+ void setName(String)
+ int getStudentNumber()
+ void setStudentNumber(int)
+ Collection<Emprunt> getEmprunts()
+ int getNombreDEmprunts()
+ void addEmprunt(Emprunt)
+ void removeEmprunt(Emprunt)
+ Emprunt getEmpruntFor(String)
+ String toString()
}


class fr.unice.polytech.biblio.components.BookNotFoundException {
}
class fr.unice.polytech.biblio.repositories.BookRepository {
- HashMap<String,List<UUID>> booksByTitle
- Map<String,Livre> bookByLibrayId
+ void save(Livre)
+ List<Livre> getBooksByTitle(String)
+ Livre getBookByLibraryId(String)
}


class fr.unice.polytech.biblio.server.httphandlers.ApiRegistry {
- Map<String,List<RouteEntry>> routes
+ void registerRoute(String,String,RouteHandler)
+ void dispatch(HttpExchange)
- void sendResponse(HttpExchange,int,String,Map<String,String>)
}


class fr.unice.polytech.biblio.server.httphandlers.ApiRegistry$RouteEntry {
- Pattern pattern
- List<String> paramNames
- RouteHandler handler
+ Pattern pattern()
+ List<String> paramNames()
+ RouteHandler handler()
}


class fr.unice.polytech.biblio.server.httphandlers.LibraryHttpHandler {
- Bibliotheque bibliotheque
- StudentRegistry studentRegistry
~ {static} Logger logger
+ void handle(HttpExchange)
- void askToBorrowBook(HttpExchange,String)
- void askToCreateBook(HttpExchange)
- void answerWithBook(HttpExchange,String)
- void answerWithAllBooks(HttpExchange)
- void validateId(String)
- void validateStudentDTO(LibraryHttpHandler.StudentDTO)
}


class fr.unice.polytech.biblio.server.httphandlers.LibraryHttpHandler$StudentDTO {
- int studentNumber
+ int studentNumber()
}


class fr.unice.polytech.biblio.server.SimpleHttpServer4Library {
- {static} Map<Integer,HttpServer> servers
~ {static} Logger logger
+ {static} int DEFAULT_PORT4LIBRARY
+ {static} int DEFAULT_PORT_4_SCOLARITY
+ {static} void main(String[])
+ {static} HttpServer startServer(int,Bibliotheque,StudentRegistry)
+ {static} void stopServer(int)
}


class fr.unice.polytech.biblio.server.httphandlers.GlobalExceptionHandler {
~ {static} Logger logger
+ {static} void handleException(HttpExchange,Exception)
+ {static} void handleException(HttpExchange,IllegalArgumentException)
+ {static} void handleException(HttpExchange,RuntimeException)
- {static} void sendErrorResponse(HttpExchange,int,String)
}


class fr.unice.polytech.biblio.entities.Livre {
- String titre
- String[] auteurs
- String isbn
- String idDansBiblio
- boolean estEmprunte
- {static} int DEFAULT_COMPTEUR
~ {static} Logger logger
+ {static} Livre createLivre(String,String)
+ String getTitre()
+ void setTitre(String)
+ String getIsbn()
+ void setIsbn(String)
+ String[] getAuteurs()
+ void setAuteurs(String)
+ boolean estEmprunte()
+ void setEstEmprunte(boolean)
+ String getIdDansBiblio()
+ boolean equals(Object)
+ int hashCode()
+ String toString()
}


class fr.unice.polytech.biblio.server.httphandlers.StudentNotFoundException {
}
class fr.unice.polytech.biblio.entities.Emprunt {
- LocalDate dateDeRetourMax
- Livre livreEmprunte
- Etudiant emprunteur
+ Livre getLivreEmprunte()
+ Etudiant getEmprunteur()
+ LocalDate getDateDeRetourMax()
+ boolean equals(Object)
+ int hashCode()
}


interface fr.unice.polytech.biblio.interfaces.StudentInterface {
~ String getName()
~ int getStudentNumber()
~ void setName(String)
~ void setStudentNumber(int)
}

interface fr.unice.polytech.biblio.interfaces.StudentManager {
~ void addStudent(String,int)
~ void removeStudent(int)
~ void updateStudent(int,String)
}

class fr.unice.polytech.biblio.server.httphandlers.LibraryHttpHandlerNew {
~ ApiRegistry apiRegistry
- Bibliotheque bibliotheque
- StudentRegistry studentRegistry
~ {static} Logger logger
- void initializeApiRegistry()
+ void handle(HttpExchange)
+ void askToBorrowBook(HttpExchange,String,ResponseSender)
+ void askToCreateBook(HttpExchange,ResponseSender)
+ void answerWithBook(HttpExchange,String,ResponseSender)
+ void answerWithAllBooks(HttpExchange,ResponseSender)
- void validateId(String)
- void validateStudentDTO(LibraryHttpHandlerNew.StudentDTO)
}


class fr.unice.polytech.biblio.server.httphandlers.LibraryHttpHandlerNew$StudentDTO {
- int studentNumber
+ int studentNumber()
}




fr.unice.polytech.repositories.Repository <|.. fr.unice.polytech.repositories.BasicRepositoryImpl
fr.unice.polytech.biblio.interfaces.StudentManager <|.. fr.unice.polytech.biblio.components.StudentRegistry
fr.unice.polytech.biblio.interfaces.StudentFinder <|.. fr.unice.polytech.biblio.components.StudentRegistry
com.sun.net.httpserver.HttpHandler <|.. fr.unice.polytech.biblio.server.httphandlers.MembersHttpHandler
fr.unice.polytech.repositories.BasicRepositoryImpl <|-- fr.unice.polytech.biblio.repositories.StudentRepository
fr.unice.polytech.biblio.interfaces.StudentInterface <|.. fr.unice.polytech.biblio.entities.Etudiant
fr.unice.polytech.biblio.components.Exception <|-- fr.unice.polytech.biblio.components.BookNotFoundException
fr.unice.polytech.repositories.BasicRepositoryImpl <|-- fr.unice.polytech.biblio.repositories.BookRepository
fr.unice.polytech.biblio.server.httphandlers.ApiRegistry +.. fr.unice.polytech.biblio.server.httphandlers.ApiRegistry$RouteEntry
com.sun.net.httpserver.HttpHandler <|.. fr.unice.polytech.biblio.server.httphandlers.LibraryHttpHandler
fr.unice.polytech.biblio.server.httphandlers.LibraryHttpHandler +.. fr.unice.polytech.biblio.server.httphandlers.LibraryHttpHandler$StudentDTO
fr.unice.polytech.biblio.server.httphandlers.Exception <|-- fr.unice.polytech.biblio.server.httphandlers.StudentNotFoundException
com.sun.net.httpserver.HttpHandler <|.. fr.unice.polytech.biblio.server.httphandlers.LibraryHttpHandlerNew
fr.unice.polytech.biblio.server.httphandlers.LibraryHttpHandlerNew +.. fr.unice.polytech.biblio.server.httphandlers.LibraryHttpHandlerNew$StudentDTO
@enduml